	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.5-trunk
 * changed librsb library detection: now it's 
   LIBS="`librsb-config  --ldflags --extra_libs` " CXXFLAGS="`librsb-config --cflags ` \
   ./configure --enable-matrices-rendering
 * scaling image code faster (thanks to __restrict__ pointers)
 * status bar will not cover image drawing space unless requested (TODO)
 * customizable SDL window caption line (TODO: r648)
 * customizable status line (TODO: r644,r651)
 * "%T" expando to get (and display) total program used memory
 * "%C" expando to get (and display) used program cache memory
 * "%c" expando to get (and display) centering information
 * "%m" expando to get (and display) current image mipmap occupation information
 * improved the 'align' command (TODO; FIXME)
 * mipmaps (rescaled images) for e.g. faster display of large images (TODO)
 * image cache will remember alignment within viewport (TODO)
 * viewport info cache size  (TODO)
 * mouse panning with in SDL mode (TODO: FIXME: disable this)
 * `make fim' goal eliminated
 * experimental JPEG-2000 support via JasPer (TODO: r660)
 * exiftool interface (TODO: r654)
 * BMP format can be configured in and out (TODO: r664*)
 * PCX format support (TODO: r666*)
 * jump back and forth from the last viewed image with the ' (single quote aka apostrophe)
   key and the _lastfileindex variable (r667*)
 * added --sort and --sort-basename to sort the images list (TODO: r669*)
 * changed meaning of variable _ignorecase: now it affects autocmd's (TODO: r671*)
 * introduced variable _re_search_opts affecting regexp-based search (TODO: r671*)
 * added the 'descload' command to load a textual files comments description file (TODO: 689*)
 * added --load-image-descriptions-file (equivalent to descload) (TODO: r672*)
 * added --image-descriptions-file-separator (TODO: r682*)
 * search (and jump) on image descriptions via 'goto' (TODO: r674*)