@@ -220,6 +220,7 @@ enum FimDocRefMode{ Txt, Man, DefRefMode=Txt};
 #define FIM_SYM_NULL_NAMESPACE_CHAR	'\0'
 #define FIM_SYM_NAMESPACE_BROWSER_CHAR	'b'
 #define FIM_SYM_NAMESPACE_IMAGE_CHAR	'i'
+#define FIM_SYM_NAMESPACE_IMAGE_ALL_STR	"i:*"
 #define FIM_SYM_NAMESPACE_GLOBAL_CHAR	'g'
 #define FIM_SYM_NAMESPACE_WINDOW_CHAR	'w'
 #define FIM_SYM_NAMESPACE_VIEWPORT_CHAR	'v'
